--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="description" content="Homepage for UK producer and DJ Darama.">
-	<meta name="keywords" content="darama, musician, producer, dj, DJ, music, UK, uk>
+	<meta name="keywords" content="darama, musician, producer, dj, DJ, music, UK, uk">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie-edge">
 	<title>Darama - Producer • DJ • Musician</title>
